--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.search-bar {
+  opacity: 0;
+  transition: opacity 0.8s ease-in-out;
+}
+
+.link {
+  opacity: 1;
+  transition: opacity 0.8s ease-in-out;
+}
